--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,31 +3,30 @@ services:
     build: .
     volumes:
       - ./sistem_desp:/app
+      - ./apply_migrations.sh:/apply_migrations.sh
     container_name: sistem-desp
     ports:
       - "8000:8000"
-    command: python manage.py runserver 0.0.0.0:8000
+    command: /bin/sh -c "chmod +x /apply_migrations.sh && /apply_migrations.sh"
     environment:
-      DATABASE_NAME: ${DB_NAME}
-      DATABASE_USER: ${DB_USER}
-      DATABASE_PASSWORD: ${DB_PASSWORD}
-      DATABASE_HOST: ${DB_HOST}
-      DATABASE_PORT: ${DB_PORT}
+      DATABASE_NAME: database
+      DATABASE_USER: dbuser
+      DATABASE_PASSWORD: admin
+      DATABASE_HOST: db-desp
+      DATABASE_PORT: 5432
     depends_on:
       db-desp:
         condition: service_healthy
 
   db-desp:
     image: postgres:15-alpine
-    volumes:
-      - db_volume:/var/lib/postgresql/data
     container_name: db-desp
     ports:
       - "5432:5432"
     environment:  
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD} 
-      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: dbuser
+      POSTGRES_PASSWORD: admin 
+      POSTGRES_DB: database
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
       interval: 5s
@@ -40,12 +39,9 @@ services:
     ports:
       - "5050:80"
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
+      PGADMIN_DEFAULT_EMAIL: admin@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: admin
     depends_on:
       db-desp:
         condition: service_healthy
 
-volumes:
-  db_volume:
-    driver: local
